# evc_assessment

./: README.md  pyproject.toml
data_wrangling/: data_wrangling.md  vendor_data_merge.ipynb  vendor_x_extraction.ipynb  vendor_y_extraction.ipynb
data_wrangling/resources/: all_vendor_data.csv  vendor_x_data_clean.csv  vendor_y_data.csv
evc2/: pyproject.toml
